# pierre

./: .gitignore  Cargo.toml  LICENSE  README.md  Vagrantfile
bot/: Cargo.toml
bot/src/: main.rs
bot/src/repo_prefs/: mod.rs  model.rs
bot/src/slack/: mod.rs
daemon/: Cargo.toml
daemon/config/: log.yaml
daemon/src/: data.rs  macros.rs  main.rs  main.rs.in  models.rs
daemon/src/slack/: attachment_builder.rs  mod.rs  model.rs
daemon/src/stash/: mod.rs
daemon/src/store/: dynamodb.rs  mod.rs
lib/: Cargo.toml
lib/src/: config.rs  data.rs  lib.rs  lib.rs.in
lib/src/repo_prefs/: mod.rs  model.rs
lib/src/store/: dynamodb.rs  memstore.rs  mod.rs
src/: config.rs  main.rs.in  watcher.rs
src/slack/: attachment_builder.rs  mod.rs
src/stash/: api.rs  mod.rs
stash-poller/: Cargo.toml
stash-poller/src/: api.rs  main.rs  notifier.rs  retriever.rs
