[package]
name = "pierre"
version = "0.1.0"
authors = ["Matt Jones <mthjones@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[dependencies]
slack = { git = "https://github.com/mthjones/slack-rs", branch = "attachment-api" }
hyper = "*"
postgres = "0.10.0"
serde = "*"
serde_json = "*"
serde_macros = { version = "*", optional = true }

[build-dependencies]
serde_codegen = { version = "*", optional = true }
syntex = "*"
