[package]
name = "pierre_daemon"
version = "0.1.0"
authors = ["Matt Jones <mthjones@gmail.com>"]

[dependencies]
pierre = { path = "../lib" }
slack_api = { git = "https://github.com/slack-rs/slack-rs-api", branch = "codegen" }
reqwest = "0.4.0"
postgres = "0.10.0"
serde = "0.9.0"
serde_json = "0.9.0"
serde_derive = "0.9.0"
rand = "*"
